# dungeons-and-dragons-game

./: .gitignore  README.md  data_cleaning.py  logger.py  main.py  nosql_conn.py  pyproject.toml  test.py  vd test.py
feature-pipeline/: armor.csv  data_cleaning.py  nosql_conn.py  vector_database.py  weapons.csv
feature-pipeline/scrapers/: backgrounds.py  classes.py  magic_items.py  monsters.py  races.py  spells.py
inference_pipeline/: dep.py  inference_methods.py
training_pipeline/: ask_llm.py
