[tool.poetry]
name = "dnd-packages"
version = "0.1.0"
description = ""
authors = ["Rajesh Kumar <rkumar70900@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
marqo = "^3.9.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
